cupt (2.9.3~) UNRELEASED; urgency=medium

  * lib:
    - cache/package:
      - Disallow more than 1 installed version per package. This fixes data
        inconsistencies which may lead to crashes. (Closes: #794430)
    - system/state:
      - Error out on empty package names.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 09 Aug 2015 17:44:44 +0300

cupt (2.9.2) unstable; urgency=medium

  * cmakelists:
    - Temporarily added a compiler switch to use old C++11 ABI. To be removed
      when Boost libraries (which we link to) get rebuilt with new C++11 ABI.
    - Removed some obsolete/unneeded include directories.
  * debian:
    - control:
      - Added forgotten Conflicts between libcupt4-dev and libcupt3-dev.
        (Closes: #792847)
    - cupt.bash-completion:
      - Added to use dh_bash-completion instead of manual file copying.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 02 Aug 2015 18:44:22 +0300

cupt (2.9.1) unstable; urgency=medium

  * lib:
    - cmakelists:
      - Pass absolute path of 'downloadmethods' directory for local builds.
        Makes downloading work when locally built cupt binary is called from
        non-usual locations.
  * test:
    - TestCupt:
      - Made the regex parsing 'cupt policy' output stricter. This reduces
        the probability of false negatives.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 17 Jul 2015 08:32:43 +0300

cupt (2.9.0) experimental; urgency=low

  * console:
    - 'functional selectors':
      - Fixed crashing when non-first argument to and() contains package
        relationship or defining functions.
      - New function 'source-to-binary'.
    - 'search':
      - FSE mode: enabled parsing of unknown version fields.
    - 'why':
      - Prefer any number of (Pre-)Depends over 1 Recommends.
      - Prefer 2 Recommends over 1 Suggests.
      - Apply penalties for non-first relations. (Closes: #772558)
    - 'snapshot save':