@@ -5,7 +5,9 @@ cupt (2.9.3~) UNRELEASED; urgency=medium
       - Disallow more than 1 installed version per package. This fixes data
         inconsistencies which may lead to crashes. (Closes: #794430)
     - system/state:
-      - Error out on empty package names.
+      - Parsing dpkg status file: error out on empty package names.
+      - Parsing dpkg status file: require 'Package' tag first for every
+        record.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 09 Aug 2015 17:44:44 +0300
 
